/*
 * Copyright (C) 2018 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
option optimize_for = LITE_RUNTIME;
package perfetto.protos;

// Representation of InodesForBlock
message InodesForBlock {
  // Representation of Inode
  message Inode {
    // The inode number of the file
    optional uint64 inode_number = 1;

    // The path to the file, e.g. "etc/file.xml"
    repeated string path = 2;

    // The file type
    enum Type {
      UNKNOWN = 0;
      FILE = 1;
      DIRECTORY = 2;
    }
    optional Type type = 3;
  }

  // The id of the block device
  optional uint64 block_device_id = 1;

  // The mount point of the blocks, e.g. "/system"
  repeated string mount_points = 2;

  // The list of all the inodes in the block
  repeated Inode inode = 3;
}
